css/src_files/03_layout.css
/********************************************
 * LAYOUT
 *
 * Setting up the padding, basic colours, and
 * any positioning.
 ********************************************/
html, body {
    width: 100%;
    height: 100%; 
}

/*** HEADER ***/
header {
    display: flex;
    flex-direction: row nowrap;
    justify-content: space-between;
}
  
div#logo {
    width: 200px;
    height: 200px;
    flex-shrink: 3;
}

div.header-titles {
    flex-grow: 4;
}

/* mobile screens */
@media screen and (max-width: 1024px) {
    header h1 {
        font-size: 2.6rem;
    }

    header h2 {
        font-size: 2rem;
    }
}

/* bigger screens */
@media screen and (min-width: 1025px) {
    header h1 {
        font-size: 4rem;
    }

    header h2 {
        font-size: 3rem;
    }
}

/*** BODY CONTENT ***/
pre, code, p, main {
    padding: 1rem; 
}

/*** FOOTER ***/
footer {
    margin-top: 0.6rem;
    width: 100%;
    font-size: 0.9rem;
    text-align: center;
}

/*** navigation ***/
nav {
    background: var(--light-blue);
    padding: 0 15px;
}

a {
    text-decoration: none;
}

.menu,
.submenu {
    list-style-type: none;
}

.item {
    padding: 10px;
}

.item.button {
    padding: 9px 5px;
}

.item:not(.button) a:hover,
.item a:hover::after {
    color: --var(--dark-blue);
}

/* Mobile menu */
.menu {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}

.menu li a {
    display: block;
    padding: 15px 10px;
}

.menu li.subitem a {
    padding: 15px;
}

.toggle {
    order: 1;
    font-size: 20px;
}

.item.button {
    order: 2;
}

.item {
    order: 3;
    width: 100%;
    text-align: center;
    display: none;
}

.active .item {
    display: block;
}

/* divider between buttons and menu links */
.button.secondary {
    border-bottom: 1px var(--mid-grey) solid;
}

/* Tablet menu */
@media all and (min-width: 700px) {
    .menu {
        justify-content: center;
    }

    .logo {
        flex: 1;
    }

    .item.button {
        width: auto;
        order: 1;
        display: block;
    }

    .toggle {
        flex: 1;
        text-align: right;
        order: 2;
    }

    /* Button up from tablet screen */
    .menu li.button a {
        padding: 10px 15px;
        margin: 5px 0;
    }

    .button a {
        background: var(--dark-blue);
        border: 1px white solid;
        color: white;
    }

    .button.secondary {
        border: 0;
        color: var(--light-blue);
    }

    .button.secondary a {
        background: transparent;
        border: 1px var(--light-blue) solid;
    }

    .button:not(.secondary) a:hover {
        background: var(--light-blue);
        border-color: var(--light-blue);
        color: var(--dark-blue);
    }
}

/* Desktop menu */
@media all and (min-width: 960px) {
    .menu {
        align-items: flex-start;
        flex-wrap: nowrap;
        background: none;
    }

    .logo {
        order: 0;
    }

    .item {
        order: 1;
        position: relative;
        display: block;
        width: auto;
    }

    .button {
        order: 2;
    }

    .submenu-active .submenu {
        display: block;
        position: absolute;
        left: 0;
        top: 68px;
        background: #111;
    }

    .toggle {
        display: none;
    }

    .submenu-active {
        border-radius: 0;
    }
}

